--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+<script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=9467f9a5"></script>
 </head>
 
 <body style="max-width: 100%">
