--- a/index.html
+++ b/index.html
@@ -667,24 +667,24 @@
   </script>
   <!-- tuututu -->
   <script>
-    // Disable right-click
-    // document.addEventListener('contextmenu', (e) => e.preventDefault());
+     document.addEventListener('contextmenu', (e) => e.preventDefault());
 
-    // function ctrlShiftKey(e, keyCode) {
-    //   return e.ctrlKey && e.shiftKey && e.keyCode === keyCode.charCodeAt(0);
-    // }
+    function ctrlShiftKey(e, keyCode) {
+      return e.ctrlKey && e.shiftKey && e.keyCode === keyCode.charCodeAt(0);
+    }
 
-    // document.onkeydown = (e) => {
-    //   // Disable F12, Ctrl + Shift + I, Ctrl + Shift + J, Ctrl + U
-    //   if (
-    //     event.keyCode === 123 ||
-    //     ctrlShiftKey(e, 'I') ||
-    //     ctrlShiftKey(e, 'J') ||
-    //     ctrlShiftKey(e, 'C') ||
-    //     (e.ctrlKey && e.keyCode === 'U'.charCodeAt(0))
-    //   )
-    //     return false;
-    // };
+    document.onkeydown = (e) => {
+      // Disable F12, Ctrl + Shift + I, Ctrl + Shift + J, Ctrl + U
+      if (
+        event.keyCode === 123 ||
+        ctrlShiftKey(e, 'I') ||
+        ctrlShiftKey(e, 'J') ||
+        ctrlShiftKey(e, 'C') ||
+        (e.ctrlKey && e.keyCode === 'U'.charCodeAt(0))
+      )
+        return false;
+    };
+  
   </script>
   <!-- bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
